# myrustblog

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  out.wasm
backend/: Cargo.toml  index.html
backend/src/: main.rs  models.rs  utils.rs
backend/src/database/: mod.rs  mongo.rs  post.rs  user.rs
backend/src/handlers/: auth.rs  frontend.rs  mod.rs  post.rs  rss.rs  syntax_highlight.rs  uploads.rs
backend/src/middlewares/: authorization.rs
backend/src/services/: email.rs
backend/src/services/templates/: confirmation.html  confirmation.txt
backend/src/utils/: macros.rs  markdown.rs  misc.rs  mod.rs  rss.rs  syntax_highlight.rs
common/: Cargo.toml
common/src/: lib.rs  utils.rs
frontend/: Cargo.toml  Truck.toml  Trunk.toml  build.rs  index.html  styles.css
frontend/src/: components.rs  lib.rs  main.rs  routes.rs
frontend/src/components/: blog.rs  edit.rs  footer.rs  header.rs  home.rs  mod.rs  post.rs  post_card.rs  service_notifications.rs  user_confirmation.rs  user_login.rs  user_registration.rs
frontend/src/pages/: blog.rs  create.rs  edit.rs  home.rs  layout.rs  mod.rs  post.rs
frontend/src/services/: api.rs  auth.rs
frontend/src/utils/: cookies.rs  macros.rs  markdown.rs  misc.rs  mod.rs  state.rs  window.rs
frontend/static/: gruvbox.css  main.js  styles.css
frontend/static/fontello/: LICENSE.txt  config.json  demo.html
frontend/static/fontello/css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css
frontend/static/fontello/font/: fontello.eot
