[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-identity = "0.7.0"
actix-session = { version = "0.9.0", features = ["redis-rs-session"] }
actix-web = "4.5.1"
actix-web-lab = { version = "0.20.2", features = ["spa"] }
bcrypt = "0.15.0"
bson = { version = "2.9.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.35", features = ["serde"] }
common = { path = "../common" }
frontend = { path = "../frontend" }
dotenv = "0.15.0"
futures-util = "0.3.30"
lettre = { version = "0.11.4", features = ["tokio1", "tokio1-native-tls"] }
mongodb = "2.8.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rss = "2.0.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
syntect = "5.2.0"
yew = { version = "0.21.0", features = ["ssr"] }
actix-files = "0.6.5"
pulldown-cmark = { version = "0.11", default-features = false, features = [
    "html",
] }
katex = "0.4.6"
