[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7"
actix-identity = "0.8"
actix-session = { version = "0.10", features = ["redis-session-native-tls"] }
actix-web = "4.10"
actix-web-lab = { version = "0.24", features = ["spa"] }
bcrypt = "0.17"
bson = { version = "2.14", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
common = { path = "../common" }
frontend = { path = "../frontend" }
dotenv = "0.15"
futures-util = "0.3"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
mongodb = "3.2"
pretty_env_logger = "0.5"
rand = "0.9"
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "5.2"
yew = { version = "0.21", features = ["ssr"] }
actix-files = "0.6"
pulldown-cmark = { version = "0.13", default-features = false, features = [
    "html",
] }
katex = "0.4"
actix-multipart = { version = "0.7.2", features = ["tempfile"] }
