[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.10.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.37", features = ["serde"] }
regex = "1.10.4"
serde = { version = "1.0.196", features = ["derive"] }
