[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
dotenv = "0.15.0"

[dependencies]
common = { path = "../common" }
log = "0.4.20"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.68", features = [
    "HtmlInputElement",
    "Document",
    "Window",
    "HtmlDocument",
] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
