[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
dotenv = "0.15"

[dependencies]
common = { path = "../common" }
gloo-net = "0.6"
log = "0.4"
pulldown-cmark = { version = "0.13", default-features = false, features = [
    "html",
] }
reqwest = { version = "0.12", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "Document",
    "Window",
    "HtmlDocument",
    "Performance",
    "HtmlDialogElement",
] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
yewdux = "0.11"
